[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://objects/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/noise.png" type="Texture" id=3]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/powerup.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform sampler2D noise;
uniform float level = 0.0;

void fragment() {
	float noise_amount = texture(noise, UV).r;
	if (noise_amount > level) {
		COLOR.rgba = texture(TEXTURE, UV);
	}
	else {
		COLOR.a = 0.0;
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/level = 0.0
shader_param/noise = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
hframes = 3

[node name="Area2D_Spike" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Spike"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Audio_Jump" type="AudioStreamPlayer" parent="."]

[node name="Audio_Powerup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Audio_Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D_Spike" to="." method="_on_Area2D_Spike_body_entered"]
